--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: 20083017的博客 | BY Blog
+title: 止于至善
+SEOTitle: 20083017的博客 | 止于至善
 header-img: img/post-bg-desk.jpg
 email: 65176340@qq.com
 description: "Every failure is leading towards success."
